--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_above="@+id/buttons"
+        android:layout_toLeftOf="@+id/setting"
         android:divider="@null" />
 
     <LinearLayout
